# SIMPLE-Py

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  README.md  myst.yml  package.json  pixi.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml
content/basic-packaging/: 01_setup.md  02_tooling.md  03_package.md  04_sp_guide.md  05_publishing_ci.md
content/compiled/: 01_compiled.md  01_package.md  02_binding.md  03_cibuildwheel.md  03_publishing_ci.md  03_rust.md  04_cibuildwheel.md
content/interesting/: ai_skbc.md  free_threading.md  lazy_imports.md
content/other-tools/: 01_plugin.md  02_pixi_build.md  03_conda_forge.md  04_distros.md
content/scikit-build/: 01_custom.md  02_stable_abi.md  03_dynamic_metadata.md  04_editable_installs.md  05_overrides.md
examples/2_01_package/collatz/: CMakeLists.txt  collatz.cpp  pyproject.toml
examples/2_02_binding/cpponly/: CMakeLists.txt  SimpleFCN.hpp  simpleminuit.cpp
examples/2_02_binding/nanobind/: CMakeLists.txt  pyproject.toml  sample.py
examples/2_02_binding/nanobind/pyminuit2/: FCNBase.cpp  FunctionMinimum.cpp  MnApplication.cpp  MnUserParameters.cpp  pyminuit2.cpp
examples/2_02_binding/pybind11/: CMakeLists.txt  pyproject.toml
examples/2_02_binding/pybind11/pyminuit2/: FCNBase.cpp  FunctionMinimum.cpp  MnApplication.cpp  MnUserParameters.cpp  pyminuit2.cpp
examples/2_02_binding/simpleclass/: CMakeLists.txt  SimpleClass.hpp  pyproject.toml  sample.py  simpleclass.cpp
examples/2_02_binding/vectorclass/: CMakeLists.txt  VectorClass.hpp  pyproject.toml  sample.py  vectorclass.cpp
examples/2_04_rust_pyo3/: .gitignore  Cargo.toml  README.md  bench.py  pixi.toml  pyproject.toml
examples/2_04_rust_pyo3/src/: lib.rs
examples/2_04_rust_pyo3/tests/: test_pyo3_example.py
examples/4_04_editable_installs/: CMakeLists.txt  pyproject.toml
examples/4_04_editable_installs/python/example/: __init__.py
examples/5_01_plugin/hatchling/: pyproject.toml  sample.py
examples/5_01_plugin/hatchling/cpp/: CMakeLists.txt  example.c
examples/5_01_plugin/setuptools/: .gitignore  CMakeLists.txt  pyproject.toml  sample.py
examples/5_02_pixi_build/basic/: .gitignore  LICENSE  README.md  original_pyproject.toml  pyproject.toml
examples/5_02_pixi_build/basic/src/rescale/: __init__.py  __main__.py  core.py
examples/5_02_pixi_build/basic/tests/: test_core.py
examples/5_02_pixi_build/compiled/: .gitignore  pyproject.toml  recipe.yaml
examples/5_04_distros/: .packit.yaml  foo.spec
examples/6_01_free_threading/: .gitignore
examples/6_01_free_threading/capi/: CMakeLists.txt  pyproject.toml  sample.py
examples/6_01_free_threading/capi/freecomputepi/: _core.cpp
examples/6_01_free_threading/nanobind/: CMakeLists.txt  pyproject.toml
examples/6_01_free_threading/nanobind/freecomputepi/: _core.cpp  pi.py
examples/6_01_free_threading/pure/: pyproject.toml
examples/6_01_free_threading/pure/freecomputepi/: pi.py
examples/6_01_free_threading/pybind11/: CMakeLists.txt  pyproject.toml
examples/6_01_free_threading/pybind11/freecomputepi/: _core.cpp
instructor-notes/: rust-pyo3-maturin-deep-dive.md
instructor-notes/research/: maturin-workflows.md  pixi-rust-toolchain.md  pyo3-current-state.md  rust-python-landscape.md
slides/: 0_01_intro.md  0_02_intro.md  1_01_setup.md  1_02_tooling.md  1_03_package.md  1_04_sp_guide.md  1_05_publishing_ci.md  2_01_compiled.md  2_01_package.md  2_02_binding.md  2_03_publishing_ci.md  2_03_rust.md  2_04_cibuildwheel.md  4_01_custom.md  4_02_stable_abi.md  4_03_dynamic_metadata.md  4_04_editable_installs.md  4_05_overrides.md  5_01_plugin.md  5_02_pixi_build.md  5_03_conda_forge.md  5_04_distros.md  6_01_free_threading.md  6_02_lazy_imports.md  6_03_ai_skbc.md  simplepy.css
