[build-system]
requires = ["scikit-build-core[setuptools]"]
build-backend = "scikit_build_core.setuptools.build_meta"

[project]
name = "setuptools_example"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.scikit-build]
cmake.source-dir = "."
# Required by the setuptools plugin for `pip install -e .` / `uv run`
editable.mode = "inplace"
