[build-system]
requires = ["scikit-build-core>=1"]
build-backend = "scikit_build_core.build"

[project]
name = "freecomputepi"
version = "0.0.1"
requires-python = ">=3.15"

[tool.scikit-build]
# Build a single stable-ABI free-threaded wheel (cp315-abi3t) that future
# free-threaded Pythons can load without recompiling
wheel.py-api = "cp315t"
wheel.exclude = ["**.cpp"]

[tool.cibuildwheel]
build = "cp315*"

# Rebuild the editable install when the build config or C++ sources change
[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "CMakeLists.txt" },
    { file = "freecomputepi/**/*.cpp" },
]
